One of final adjustments

--- a/EngineeringScience - Aministrative contacts.html
+++ b/EngineeringScience - Aministrative contacts.html
@@ -83,7 +83,7 @@
 					<div style="text-align: center; "id="test3">
 					<p style="margin: 7px 0px">Shengye Dong</p>
 					<p style="margin: 7px 0px">Engineering Science Program Student Support</p>
-					<p style="margin: 7px 0px"><a href="mailto:SHD85@pitt.edu" style="text-decoration:none;color:;">Email: SHD85@pitt.edu</a></p>
+					<p style="margin: 7px 0px"><a href="mailto:SHD85@pitt.edu" style="text-decoration:none;color: #000080;">Email: SHD85@pitt.edu</a></p>
 					</div>
 				</div>
 
