--- a/EngineeringScience - Location.html
+++ b/EngineeringScience - Location.html
@@ -76,7 +76,7 @@
 				<br>Benedum 808<br></p>
 				
 				<p style="margin-left:10px;">Office of MEMS Undergraduate Student Administrator:<br>Manns, Heather L.
-				<br>Benedum 6xx<br></p>
+				<br>Benedum 636<br></p>
 			</div>
 		</div>
 			<div id="move2" style="display:none;">
@@ -88,7 +88,7 @@
 				<br>Benedum 808<br></p>
 				
 				<p style="margin-left:10px;">Office of MEMS Undergraduate Student Administrator:<br>Manns, Heather L.
-				<br>Benedum 6xx<br></p>
+				<br>Benedum 636<br></p>
 			</div>
 			
 			
