--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 					<div>
 						<img src="picturegallery/spot1/img3.jpg" style="width:100%;height:auto;">
 					</div>
+					<div>
+						<img src="picturegallery/spot1/img4.jpg" style="width:100%;height:auto;">
+					</div>
    
 				</div>
 				<div class="slideshow" id="slideshow2">
@@ -80,7 +83,9 @@
 					<div>
 						<img src="picturegallery/spot2/img3.jpg" style="width:100%;height:auto;;">
 					</div>
-   
+					<div>
+						<img src="picturegallery/spot2/img4.jpg" style="width:100%;height:auto;">
+					</div>
 				</div>
 				<div class="slideshow" id="slideshow3">
 					<div>
@@ -91,6 +96,9 @@
 					</div>
 					<div>
 						<img src="picturegallery/spot3/img3.jpg" style="width:100%;height:auto;;">
+					</div>
+					<div>
+						<img src="picturegallery/spot3/img4.jpg" style="width:100%;height:auto;">
 					</div>
    
 				</div>
