--- a/EngineeringScience - Prospective Students.html
+++ b/EngineeringScience - Prospective Students.html
@@ -96,7 +96,7 @@
 				<!--<img src="images/Howtoapply.jpg" alt="Background image" style="width:100%; height:auto;padding-right: 0px;padding-left: 0px;z-index:999;position:relative;">-->
 				<div id="pic" style="width: 600px;
 							height: 100%;
-							background-image: url('https://cdn.bitdegree.org/learn/resting-doggo.jpg?4d5e638c');
+							background-image: url('images/MCSIBACK.jpg');
 							background-size: cover;margin-top:10px;margin-left:20px;"></div>
 				<div style="padding-left:20px;padding-right:20px; padding-top:20px">
 				<h1>How to apply to Engineering Science?</h1>
