--- a/EngineeringScience - MCSI.html
+++ b/EngineeringScience - MCSI.html
@@ -70,7 +70,7 @@
 			
 		</header>
 		<div class='box'>
-		<div class = "section-wraper" style="color:#294704">
+		<div class = "section-wraper" style="color:#294704; height:78%;">
 			<!--<h2 style="background-image: url('images/greenback.jpg');width:100%;min-height:50px;background-size:cover;text-align:center;-webkit-text-stroke: 1.8px #294704; 
 
      color: white;font-size:3vw; padding-top:30px;padding-bottom:30px;">Mascaro Center for Sustainable Innovation</h2>-->
