--- a/EngineeringScience - Prospective Students.html
+++ b/EngineeringScience - Prospective Students.html
@@ -101,7 +101,7 @@
 				<div style="padding-left:20px;padding-right:20px; padding-top:20px">
 				<h1>How to apply to Engineering Science?</h1>
 				<p style="font-weight: none">There are three ways to get into Engineering Science Program at Pitt:</p>
-				<button class="dropdownbar">Direct application to ES at Pitt</button>
+				<button class="dropdownbar" id="ini">Direct application to ES at Pitt</button>
 					<div class="content">
 					<p>After applying to the Swanson School of Engineering, all first-year engineering students will complete the 
 					<a href="https://www.engineering.pitt.edu/First-Year/First-Year/Academic/First-Year-Academic/" target = "_blank">First-Year Engineering curriculum</a>.
@@ -172,6 +172,16 @@ for (q = 0; q < down.length; q++) {
     } 
   });
 }
+</script>
+<script>
+	$(document).ready(function(){
+		$("#ini").trigger("click");
+
+
+	}
+	
+	
+	);
 </script>
  
 </html>
