--- a/EngineeringScience - Current Students.html
+++ b/EngineeringScience - Current Students.html
@@ -82,13 +82,13 @@
 		-->
 			<div class="gridcontainer7">
 				<a href="https://admissions.pitt.edu/transfer/transfer-credit-gpa-guidelines/" style="margin: 5% 5%;" ><img src="images/Transfercredit.jpg" alt="Transfer credit icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://www.engineering.pitt.edu/Student/Student-Programs/International/" style="margin: 5% 5%;"><img src="images/Studyabroad.jpg" alt="Study abroad icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://www.engineering.pitt.edu/Student/Student-Programs/International/" style="margin: 5% 5%;"><img src="images/studyabroad.jpg" alt="Study abroad icon" style="max-width: 100%; height:auto"></a>
 				<a href="https://financialaid.pitt.edu/"style="margin: 5% 5%;" ><img src="images/aid.jpg" alt="aid icon" style="max-width: 100%; height:auto"></a>
 				<a href="https://www.studentaffairs.pitt.edu/shs/online-portal-services/"style="margin: 5% 5%;" ><img src="images/wellnesscenter.jpg" alt="wellness center icon" style="max-width: 100%; height:auto"></a>
 				<a href="https://www.studentaffairs.pitt.edu/cdpa/" style="margin: 5% 5%;"><img src="images/Careercenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
 				<a href="https://www.writingcenter.pitt.edu/"style="margin: 5% 5%;" ><img src="images/writingcenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
 				<a href="http://www.ieee-iri.org/mathematics_subdomain/about/math-assistance-center.html" style="margin: 5% 5%;"><img src="images/mac.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="EngineeringScience - minor.html" style="margin: 5% 5%;"><img src="images/Minorc.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
+				<a href="EngineeringScience - minor.html" style="margin: 5% 5%;"><img src="images/minorc.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
 				<a href="EngineeringScience - Form.html" style="margin: 5% 5%;"><img src="images/form.jpg" alt="Forms icon" style="max-width: 100%; height:auto"></a>
 			</div>
 		</div>
