--- a/EngineeringScience - CurrentStudents.html
+++ b/EngineeringScience - CurrentStudents.html
@@ -85,10 +85,10 @@
 				<a href="https://www.engineering.pitt.edu/Student/Student-Programs/International/" style="margin: 5% 5%;"><img src="images/studyabroad.jpg" alt="Study abroad icon" style="max-width: 100%; height:auto"></a>
 				<a href="https://financialaid.pitt.edu/"style="margin: 5% 5%;" ><img src="images/aid.jpg" alt="aid icon" style="max-width: 100%; height:auto"></a>
 				<a href="https://www.studentaffairs.pitt.edu/shs/online-portal-services/"style="margin: 5% 5%;" ><img src="images/wellnesscenter.jpg" alt="wellness center icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://www.studentaffairs.pitt.edu/cdpa/" style="margin: 5% 5%;"><img src="images/Careercenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://www.writingcenter.pitt.edu/"style="margin: 5% 5%;" ><img src="images/writingcenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="http://www.ieee-iri.org/mathematics_subdomain/about/math-assistance-center.html" style="margin: 5% 5%;"><img src="images/mac.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="EngineeringScience - minor.html" style="margin: 5% 5%;"><img src="images/minorc.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://www.studentaffairs.pitt.edu/cdpa/" style="margin: 5% 5%;"><img src="images/careercenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://www.writingcenter.pitt.edu/"style="margin: 5% 5%;" ><img src="images/writingcenter.jpg" alt="writing center icon" style="max-width: 100%; height:auto"></a>
+				<a href="http://www.ieee-iri.org/mathematics_subdomain/about/math-assistance-center.html" style="margin: 5% 5%;"><img src="images/mac.jpg" alt="math assistance center icon" style="max-width: 100%; height:auto"></a>
+				<a href="EngineeringScience - minor.html" style="margin: 5% 5%;"><img src="images/minorc.jpg" alt="minor page icon" style="max-width: 100%; height:auto"></a>
 				<a href="EngineeringScience - Form.html" style="margin: 5% 5%;"><img src="images/form.jpg" alt="Forms icon" style="max-width: 100%; height:auto"></a>
 			</div>
 		</div>
