--- a/EngineeringScience - Acknowledgement.html
+++ b/EngineeringScience - Acknowledgement.html
@@ -57,9 +57,9 @@
     <div id="particles-js" style="left:0;top:5px;z-index:-1"></div>
     
     <div class="box" >
-       <img src="picture/picture8.png" style="position:absolute; top:50px;width:200px;left:-150px;" class="chillingball1"></img>
-       <img src="picture/picture9.png" style="position:absolute; top:150px;width:350px;right:-280px;;" class="chillingball2"></img>
-       <img src="picture/picture10.png" style="position:absolute; bottom:-360px;width:350px;right:50px;;" class="chillingball3"></img>
+       <img src="picture/Picture8.png" style="position:absolute; top:50px;width:200px;left:-150px;" class="chillingball1"></img>
+       <img src="picture/Picture9.png" style="position:absolute; top:150px;width:350px;right:-280px;;" class="chillingball2"></img>
+       <img src="picture/Picture10.png" style="position:absolute; bottom:-360px;width:350px;right:50px;;" class="chillingball3"></img>
        <div style="position:absolute;bottom:10px;left:1px;color:white;">
         
        <div class="posX" style="margin-bottom:10px;">X: <span></span></div>
