--- a/EngineeringScience - Acknowledgement.html
+++ b/EngineeringScience - Acknowledgement.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-eqip="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Engineering Science at University of Pittsburgh</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	
