--- a/EngineeringScience - Acknowledgement.html
+++ b/EngineeringScience - Acknowledgement.html
@@ -9,17 +9,17 @@
 
     <link rel="stylesheet" href="css/style.css">
 	
-    <script>src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"</script>
+  
 
 
     <!--<script type="module" src="js/javascript.js"></script>-->
     <script type="module" src="js/redpill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> 
-     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
-     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> 
-     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" crossorigin=“anonymous”></script> <!-- stats.js lib --> 
+     <script src="http://threejs.org/examples/js/libs/stats.min.js" crossorigin=“anonymous”></script>
+     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" crossorigin=“anonymous”></script> <!-- stats.js lib --> 
+     <script src="http://threejs.org/examples/js/libs/stats.min.js" crossorigin=“anonymous”></script>
      <script>
          particlesJS.load('particles-js','particles.json',function()
          {
