--- a/EngineeringScience - Current Student Feedbacks.html
+++ b/EngineeringScience - Current Student Feedbacks.html
@@ -76,7 +76,7 @@
 		</header>
 		<div class='box'>
 		<div class ="section-wraper" style=" height:78%;">
-			<h1 id="sp">Listern to the voice of our current students in Engineering Science Program!</h1>
+			<h1 id="sp">Listen to the voice of our current students in Engineering Science Program!</h1>
 			<div class="gridcontainer4" id = "show1">
 				<div style="margin-right:20px;">
 				<p> <span style="font-size: 13px;font-weight:noraml;margin-top:0px;">
