--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<p style="font-size:14px;font-weight:bold;margin:5px 0;">of graduates think the Engineering Science program at Pitt is more effective than or equally effective to traditional Engineering programs in preparing students for industry.</p>
 					</div>
 				
-				<p style="font-size:14px;font-weight:bold;margin:5px 0;color:#05213b7a;">Data are from recent alumni survey.<p>
+				<p style="font-size:14px;font-weight:bold;margin:5px 0;color:#05213b7a;">Data are from a recent alumni survey.<p>
 				</div>
 				</div>
 				
