--- a/EngineeringScience - Current Student Feedbacks.html
+++ b/EngineeringScience - Current Student Feedbacks.html
@@ -58,6 +58,15 @@
 	font-weight:bold;
   }
 }
+	@media only screen and (max-width: 895px) {
+ .section-wraper {
+	padding: 25px 5%;
+  }
+  .box{
+	padding: 0px 0px;
+  }
+  }
+
 	  </style>
   <body>
   <!--
