--- a/EngineeringScience - Administrative Contacts.html
+++ b/EngineeringScience - Administrative Contacts.html
@@ -99,6 +99,17 @@
 					<p style="margin: 7px 0px"><a href="mailto:EKT17@pitt.edu" style="text-decoration:none;color: #000080;">Email: EKT17@pitt.edu</a></p>
 					</div>
 					</div>
+
+					<div class="inlinegrid1">
+				
+						<img src="images/Natan.jpg" alt="Natan's photo" style = "width:100%;  height:auto;align-self: start;">
+					
+						<div style="text-align: center;">
+						<p style="margin: 7px 0px">Natan Herzog</p>
+						<p style="margin: 7px 0px">Engineering Science Program Student Support</p>
+						<p style="margin: 7px 0px"><a href="mailto:NPH17@pitt.edu" style="text-decoration:none;color: #000080;">Email: NPH17@pitt.edu</a></p>
+						</div>
+						</div>
 				</div>
 			</div>	
 		</div>
